# domain-mcp

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/tools/: dns.rs  domain.rs  domain_age_check.rs  expired.rs  mod.rs  rdap.rs  ssl.rs  whois.rs
tests/: e2e.rs
tests/common/: mod.rs
