[package]
name = "domain-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
trust-dns-resolver = "0.23"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"
regex = "1.11"
futures = "0.3"
tempfile = "3.14"
rmcp = { version = "0.6.1", features = ["server", "transport-io", "macros", "schemars"] }

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"
